--- a/Pet/Windows/Window_Options.xaml
+++ b/Pet/Windows/Window_Options.xaml
@@ -1,36 +1,109 @@
 ﻿<Window x:Class="Pet.Window_Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Pet"
-        mc:Ignorable="d"
-        Title="Options" Height="175" Width="300"
+        Title="Options" Height="290" Width="400"
         ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         FontFamily="pack://application:,,,/#Kavivanar"
         Loaded="Window_Loaded" Closed="Window_Closed"
-        FontSize="14">
+        FontSize="22"
+        AllowsTransparency="True"
+        Background="Transparent">
 
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
             <Setter Property="FontSize" Value="22"/>
         </Style>
+
+        <Style TargetType="{x:Type CheckBox}" >
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type CheckBox}">
+                        <BulletDecorator Cursor="Hand">
+                            <!-- Text element -->
+                            <Border Height="Auto" CornerRadius="3" BorderBrush="#FFE2E2E2" BorderThickness="1">
+                                <Grid>
+                                    <ContentPresenter VerticalAlignment="Center" Margin="20 0" />
+
+                                    <!-- Because our border is the switching element, we don't need a bullet -->
+                                    <Border Width="10" Margin="5,0,48,0" Background="#FFCDCDCD" CornerRadius="1" Name="RadioMark" HorizontalAlignment="Left"/>
+                                </Grid>
+
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="White" Offset="0"/>
+                                        <GradientStop Color="#FFE2E2E2" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+
+                            </Border>
+
+                        </BulletDecorator>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="true">
+                                <Setter TargetName="RadioMark" Property="Background" Value="DodgerBlue"/>
+                            </Trigger>
+
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="RadioMark" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
 
-    <Border BorderBrush="#FF00B5C5" BorderThickness="5" CornerRadius="2" Background="#FFa2F2FE">
-        <Border BorderBrush="#FF00B5C5" BorderThickness="2" CornerRadius="2" Background="White" Margin="1">
+    <Border BorderBrush="DodgerBlue" BorderThickness="5" CornerRadius="10" Background="SkyBlue">
+        <Border BorderBrush="#FF00B5C5" BorderThickness="2" CornerRadius="10" Margin="1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5, 1">
+                    <GradientStop Color="AliceBlue" Offset="0.0"/>
+                    <GradientStop Color="AntiqueWhite" Offset="0.5"/>
+                    <GradientStop Color="AliceBlue" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Background>
 
-            <StackPanel Margin="10">
-                <CheckBox Name="checkBox_dailyComments" Margin="0 0 0 5">Daily comments</CheckBox>
-                <TextBlock Text="Dafault pet's name:"/>
-                <TextBox Name="tb_Name" Text="Rex" Margin="0 0 0 5"/>
-                <Button Click="Button_Click" Content="✔" Width="50"/>
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-            </StackPanel>
+                <Border Grid.Row="0" BorderBrush="#FF00B5C5" BorderThickness="5" CornerRadius="10" Background="LightGreen" Margin="75 0 75 5">
 
+                    <StackPanel Margin="10 0">
+
+                        <TextBlock Text="OPTIONS" HorizontalAlignment="Center" FontWeight="Bold" Width="auto" FontSize="24"/>
+                    </StackPanel>
+                </Border>
+                <CheckBox Grid.Row="1" Name="checkBox_Windowed" Margin="0 0 0 5" Content="Windowed"/>
+
+                <CheckBox Grid.Row="2" Name="checkBox_Music" Margin="0 0 0 5" Content="Music"/>
+
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Text="Default pet's name:"/>
+                    <TextBox Grid.Column="1" Name="tb_Name" Text="Rex" Margin="0 0 0 5"/>
+                </Grid>
+
+                <CheckBox Grid.Row="4" Name="checkBox_dailyComments" Margin="0 0 0 5">Daily comments</CheckBox>
+
+                <Button Grid.Row="5" Click="Button_Click" Content="✔" Width="75"/>
+
+
+            </Grid>
         </Border>
-
     </Border>
 
 </Window>
