--- a/Pet/Windows/Window_Menu.xaml
+++ b/Pet/Windows/Window_Menu.xaml
@@ -1,12 +1,107 @@
 ﻿<Window x:Class="Pet.Window_Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Pet"
-        mc:Ignorable="d"
-        Title="Window_Menu" Height="450" Width="800">
-    <Grid>
+        Title="Options" Height="290" Width="400"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
         
-    </Grid>
+        FontFamily="pack://application:,,,/#Kavivanar"
+        UseLayoutRounding="True"
+        FontSize="30"
+        AllowsTransparency="True"
+        Background="Transparent"
+        Loaded="Window_Loaded"
+        Closed="Window_Closed">
+
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="FontSize" Value="30"/>
+        </Style>
+
+        <Style TargetType="{x:Type CheckBox}" >
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type CheckBox}">
+                        <BulletDecorator Cursor="Hand">
+                            <!-- Text element -->
+                            <Border Height="Auto" CornerRadius="3" BorderBrush="#FFE2E2E2" BorderThickness="1">
+                                <Grid>
+                                    <ContentPresenter VerticalAlignment="Center" Margin="20 0" />
+
+                                    <!-- Because our border is the switching element, we don't need a bullet -->
+                                    <Border Width="10" Margin="5,0,48,0" Background="#FFCDCDCD" CornerRadius="1" Name="RadioMark" HorizontalAlignment="Left"/>
+                                </Grid>
+
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="White" Offset="0"/>
+                                        <GradientStop Color="#FFE2E2E2" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
+
+                            </Border>
+
+                        </BulletDecorator>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="true">
+                                <Setter TargetName="RadioMark" Property="Background" Value="DodgerBlue"/>
+                            </Trigger>
+
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="RadioMark" Property="Visibility" Value="Collapsed"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <Border BorderBrush="DodgerBlue" BorderThickness="5" CornerRadius="10" Background="SkyBlue">
+        <Border BorderBrush="#FF00B5C5" BorderThickness="2" CornerRadius="10" Margin="1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
+                    <GradientStop Color="AliceBlue" Offset="0.0"/>
+                    <GradientStop Color="AntiqueWhite" Offset="0.5"/>
+                    <GradientStop Color="AliceBlue" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <Button Grid.Row="0" Click="Button_Continue" Content="Continue"/>
+
+                <Button Grid.Row="1" Name="btn_Restart" Click="btn_Restart_Click" ToolTip="Restart the game">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+
+                        <Image Grid.Column="0" Source="pack://application:,,,/Images/reload.png" MaxHeight="20" Stretch="Uniform"/>
+
+                        <TextBlock Grid.Column="1" VerticalAlignment="Center" Margin="5 0" Text="Restart"/>
+                    </Grid>
+                </Button>
+
+                <Button Grid.Row="2" Name="btn_MainMenu" Click="btn_MainMenu_Click" ToolTip="Return to Main Menu">
+                    <TextBlock VerticalAlignment="Center" Text="Main Menu"/>
+                </Button>
+
+                <Button Grid.Row="3" Click="Button_Exit" Content="Exit Game"/>
+
+                <CheckBox Grid.Row="4" Name="checkBox_Music"  Margin="0 0 0 5" Content="Music"/>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
