--- a/Pet/UserControls/UserControl_MainMenu.xaml
+++ b/Pet/UserControls/UserControl_MainMenu.xaml
@@ -78,8 +78,11 @@
                     </Grid.RowDefinitions>
 
                     <Button Grid.Row="0" Content="PLAY" Click="btn_Play_Click" Background="SkyBlue"/>
-                    <Button Grid.Row="1" Content="OPTIONS" Click="btn_Options_Click" Background="LightGreen"/>
-                    <Button Grid.Row="2" Content="ABOUT" Click="btn_Website_Click" ToolTip="{Binding ElementName=link, Path=NavigateUri}" Background="#ffe868"/>
+
+                    <Button Grid.Row="1" Name="btn_Load" Content="LOAD" Click="btn_Load_Click" Background="LightGreen" IsEnabled="False"/>
+
+                    <Button Grid.Row="2" Content="OPTIONS" Click="btn_Options_Click" Background="#ffe868"/>
+
                     <Button Grid.Row="3" Content="EXIT" Click="btn_Exit_Click" ToolTip="Goodbye" Background="Coral"/>
                 </Grid>
 
